# todo

./: docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  chess.db  pyproject.toml
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/models/: __init__.py  user.py
backend/app/routers/: __init__.py  auth.py  game.py  leaderboard.py
backend/app/schemas/: __init__.py  user.py
backend/app/services/: __init__.py  chess_game.py  leaderboard.py  matchmaking.py  stockfish.py
backend/app/websocket/: __init__.py  game_ws.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: App.tsx  AuthContext.tsx  api.ts  index.css
frontend/src/components/: Navbar.tsx
frontend/src/pages/: Dashboard.tsx  Game.tsx  Leaderboard.tsx  Login.tsx  Play.tsx  Register.tsx
redis/: README.md  docker-compose.yml  redis.conf
